[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Images/Composition/EpisodeSelection/multidão_do_darcy.jpeg" type="Texture" id=1]
[ext_resource path="res://assets/Styles/Themes/EpisodeSelection.tres" type="Theme" id=2]
[ext_resource path="res://assets/icons/previous.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/next.png" type="Texture" id=4]
[ext_resource path="res://assets/Images/Composition/Menu/Padrão3.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/Composition/Menu/Padrão2.png" type="Texture" id=6]
[ext_resource path="res://assets/Images/Composition/Menu/Padrão1.png" type="Texture" id=7]
[ext_resource path="res://scenes/FirstAccess/EpisodeSelection.gd" type="Script" id=8]
[ext_resource path="res://assets/Images/Composition/EpisodeSelection/cadeado.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.945098, 0.933333, 0.905882, 0 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.4, 0.631373, 0.862745, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="EpisodeSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="BackGround" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 575.0
color = Color( 0.945098, 0.933333, 0.905882, 1 )

[node name="Padrão1" type="Sprite" parent="."]
position = Vector2( 889, 373 )
scale = Vector2( 0.275947, 0.275947 )
texture = ExtResource( 7 )

[node name="Padrão2" type="Sprite" parent="."]
position = Vector2( 109, 125 )
scale = Vector2( 0.261364, 0.261364 )
texture = ExtResource( 6 )

[node name="Padrão3" type="Sprite" parent="."]
position = Vector2( 188, 423 )
scale = Vector2( 0.285606, 0.285606 )
texture = ExtResource( 5 )

[node name="Nucleo" type="Sprite" parent="."]
position = Vector2( 508, 286 )
scale = Vector2( 0.259089, 0.259089 )
texture = ExtResource( 1 )

[node name="Taguatinga" type="Sprite" parent="."]
visible = false
position = Vector2( 508, 286 )
scale = Vector2( 0.259089, 0.259089 )

[node name="PlanoPiloto" type="Sprite" parent="."]
visible = false
position = Vector2( 508, 286 )
scale = Vector2( 0.259089, 0.259089 )

[node name="LockedColor" type="ColorRect" parent="."]
visible = false
margin_left = 92.0
margin_top = 90.0
margin_right = 923.0
margin_bottom = 481.0
color = Color( 0, 0, 0, 0.584314 )

[node name="PlayableColor" type="ColorRect" parent="."]
margin_left = 92.0
margin_top = 90.0
margin_right = 925.0
margin_bottom = 481.0
color = Color( 0.670588, 0.670588, 0.670588, 0.329412 )

[node name="Panel2" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -423.0
margin_top = -202.0
margin_right = 416.0
margin_bottom = 197.0
custom_styles/panel = SubResource( 2 )

[node name="NucleoText" type="TextEdit" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0.0352941, 0.0117647, 0.0117647, 1 )
margin_left = 265.0
margin_top = 262.0
margin_right = 837.0
margin_bottom = 339.0
theme = ExtResource( 2 )
text = "                 Núcleo Bandeirante"
bookmark_gutter = true

[node name="TaguatingaText" type="TextEdit" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0.0352941, 0.0117647, 0.0117647, 1 )
margin_left = 315.0
margin_top = 263.0
margin_right = 887.0
margin_bottom = 340.0
theme = ExtResource( 2 )
text = "                 Taguatinga"
bookmark_gutter = true

[node name="PlanoPilotoText" type="TextEdit" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0.0352941, 0.0117647, 0.0117647, 1 )
margin_left = 301.0
margin_top = 264.0
margin_right = 873.0
margin_bottom = 341.0
theme = ExtResource( 2 )
text = "                 Plano Piloto"
bookmark_gutter = true

[node name="Padlock" type="Sprite" parent="."]
visible = false
position = Vector2( 497, 199 )
scale = Vector2( 0.259089, 0.259089 )
texture = ExtResource( 9 )

[node name="ButtonNext" type="Button" parent="."]
margin_left = 881.0
margin_top = 245.0
margin_right = 921.0
margin_bottom = 334.0
theme = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="ButtonBack" type="Button" parent="."]
margin_left = 100.0
margin_top = 239.0
margin_right = 137.0
margin_bottom = 333.0
theme = ExtResource( 2 )
icon = ExtResource( 3 )

[connection signal="pressed" from="ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
